[project]
name = "network-probing-tools"
version = "1.0.0"
description = "Comprehensive network diagnosis and probing tools with TCP, TLS, HTTP, and path tracing capabilities"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Matthewyin", email = "2738550@qq.com"}
]
license = {text = "MIT"}
keywords = ["network", "diagnosis", "tcp", "tls", "http", "traceroute", "mtr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "cryptography>=45.0.7",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/Matthewyin/probing"
Repository = "https://github.com/Matthewyin/probing.git"
Issues = "https://github.com/Matthewyin/probing/issues"

[project.scripts]
network-diagnosis = "network_diagnosis.main:main"
batch-diagnosis = "network_diagnosis.batch_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["network-diagnosis/src/network_diagnosis"]
